Prevent swipe down refresh on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -25,6 +25,7 @@ html, body {
   height: 100%;
   background: var(--color_bg);
   color: var(--color_fg);
+  overscroll-behavior: none;
 }
 
 * {
